--- a/src/main/resources/templates/fragments/inspection.html
+++ b/src/main/resources/templates/fragments/inspection.html
@@ -3,7 +3,7 @@
     <table class="table">
         <tr>
             <td>ID</td>
-            <td th:if="${fragView != null}" title="Get a standalone page for this establishment with inspection details."><a target="_blank" th:text="${establishment.id()} + ' ⧉'" th:href="${'/establishment/' + establishment.id()}"></a></td>
+            <td th:if="${fragView != null}" data-toggle="tooltip" data-placement="top" title="Get a standalone page for this establishment with inspection details."><a target="_blank" th:text="${establishment.id()} + ' ⧉'" th:href="${'/establishment/' + establishment.id()}"></a></td>
             <td th:if="${fragView == null}" th:text="${establishment.id()}"></td>
         </tr>
         <tr>
@@ -15,7 +15,7 @@
             <td th:text="${establishment.type()}"></td>
         </tr>
         <tr>
-            <td title="The last seen rank as available on the establishment-level on the SLCO health inspection site.">Last Rank</td>
+            <td data-toggle="tooltip" data-placement="top" title="The last seen rank as available on the establishment-level on the SLCO health inspection site.">Last Rank</td>
             <td th:text="${lastRank == null ? '???' : lastRank + '%'}"></td>
         </tr>
     </table>
@@ -43,8 +43,8 @@
                             <th>Points</th>
                             <th>Critical</th>
                             <th>Occurrences</th>
-                            <th title="Corrected on site during inspection.">COS</th>
-                            <th title="Public Health Rationale (Why is this a violation?)">PHR</th>
+                            <th data-toggle="tooltip" data-placement="top" title="Corrected on site during inspection.">COS</th>
+                            <th data-toggle="tooltip" data-placement="top" title="Public Health Rationale (Why is this a violation?)">PHR</th>
                         </tr>
                         <tr th:each="v : ${i.v()}" th:class="${v.critical() ? 'table-danger' : 'table-primary'}">
                             <td th:text="${v.code()}"></td>
