--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,6 +29,10 @@
             <div class="d-flex align-items-center justify-content-center">
                 <p>Click on a pin on the map to view an inspection.</p>
             </div>
+            <div class="d-flex align-items-center justify-content-center">
+                <p><b>Note!</b> An asterisk (*) on hover after the name means the coordinates were modified slightly to
+                    prevent layering.</p>
+            </div>
         </div>
     </div>
 </div>
@@ -60,7 +64,7 @@
                     L.marker([marker.lat, marker.lng], {id: marker.establishment.id})
                         // .bindPopup(`<b>${marker.establishment.name} <a target="_blank" title="Open standalone page for this establishment" href="/establishment/${marker.establishment.id}">⧉</a></b><br>${marker.establishment.address}<br>${marker.lat},${marker.lng}`)
                         .addTo(cities.get(marker.establishment.city))
-                        .bindTooltip(`<b>${marker.establishment.name}</b><br>${marker.establishment.address}`)
+                        .bindTooltip(`<b>${marker.establishment.name}${marker.coordinatesModified ? '*' : ''}</b><br>${marker.establishment.address}`)
                         .on('click', function (e) {
                             // <div class="d-flex align-items-center justify-content-center"><p>Click on a pin on the map to view an inspection.</p></div>
                             // <div class="progress" style="width: 50em"><div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div</div>
