Convert blank phone numbers to be null instead

--- a/src/main/resources/templates/fragments/inspection.html
+++ b/src/main/resources/templates/fragments/inspection.html
@@ -34,7 +34,8 @@
                     </tr>
                     <tr>
                         <td>Phone Number</td>
-                        <td th:text="${establishment.phone()}"></td>
+                        <td th:if="${establishment.phone() == null}"><i>Unknown</i></td>
+                        <td th:if="${establishment.phone() != null}" th:text="${establishment.phone()}"></td>
                     </tr>
                 </table>
             </div>
