--- a/src/main/resources/templates/fragments/inspection.html
+++ b/src/main/resources/templates/fragments/inspection.html
@@ -33,6 +33,18 @@
                         <td th:text="${establishment.getEntityCreationAsRfc1123()}"></td>
                     </tr>
                     <tr>
+                        <td data-toggle="tooltip" title="The last time this establishment was seen via the scraper.">Last Seen</td>
+                        <td th:if="${establishment.lastSeen().compareTo(lastSeenCutoff) < 0}"
+                            style="text-decoration: underline; text-decoration-style: dashed;"
+                            class="text-danger"
+                            data-toggle="tooltip" data-bs-placement="bottom"
+                            title="This establishment most likely doesn't exist from the source, as it was last seen over a day ago via the latest inspection's update. It may have been renamed, merged, or otherwise deleted."
+                            th:text="'!!!! ' + ${T(io.banditoz.dohmap.utils.DateUtils).getDateAsRfc1123(establishment.lastSeen())}">
+                            <!-- TODO better warning indicator above. Underline with prepended exclamations look ugly. -->
+                        <td th:if="${establishment.lastSeen().compareTo(lastSeenCutoff) > 0}"
+                            th:text="${T(io.banditoz.dohmap.utils.DateUtils).getDateAsRfc1123(establishment.lastSeen())}">
+                    </tr>
+                    <tr>
                         <td>Phone Number</td>
                         <td th:if="${establishment.phone() == null}"><i>Unknown</i></td>
                         <td th:if="${establishment.phone() != null}" th:text="${establishment.phone()}"></td>
