--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/static/leaflet/leaflet.css"/>
     <script src="/static/leaflet/leaflet.js"></script>
     <div th:replace="~{fragments/scripts.html :: scripts}"></div>
+    <script src="/static/index.js"></script>
 
     <style>
         #map, #inspection {
@@ -20,7 +21,7 @@
         }
     </style>
 </head>
-<body>
+<body onload="setup()">
 <nav th:replace="~{fragments/navbar.html :: navbar}"></nav>
 <div class="container-fluid">
     <div class="row">
@@ -36,48 +37,5 @@
         </div>
     </div>
 </div>
-
-<script>
-    const map = L.map('map').setView([40.64053, -111.934204], 11);
-
-    L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        maxZoom: 19,
-        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-    }).addTo(map);
-
-    fetch("/api/pins/all")
-        .then(res => res.json())
-        .then(data => {
-            console.log(`We have ${data.data.length} markers.`);
-            // should we just use JS objects here?
-            const cities = new Map();
-            data.data
-                .filter(marker => marker.lat !== null)
-                .forEach(marker => {
-                    // drop ' TS' from markers to group together those cities, i.e. 'MAGNA' and 'MAGNA TS'
-                    if (marker.establishment.city.endsWith(' TS')) {
-                        marker.establishment.city = marker.establishment.city.replace(' TS', '');
-                    }
-                    if (!cities.has(marker.establishment.city)) {
-                        cities.set(marker.establishment.city, L.layerGroup());
-                    }
-                    L.marker([marker.lat, marker.lng], {id: marker.establishment.id})
-                        // .bindPopup(`<b>${marker.establishment.name} <a target="_blank" title="Open standalone page for this establishment" href="/establishment/${marker.establishment.id}">⧉</a></b><br>${marker.establishment.address}<br>${marker.lat},${marker.lng}`)
-                        .addTo(cities.get(marker.establishment.city))
-                        .bindTooltip(`<b>${marker.establishment.name}${marker.coordinatesModified ? '*' : ''}</b><br>${marker.establishment.address}`)
-                        .on('click', function (e) {
-                            // <div class="d-flex align-items-center justify-content-center"><p>Click on a pin on the map to view an inspection.</p></div>
-                            // <div class="progress" style="width: 50em"><div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div</div>
-                            // $('#inspection').html('<div class="progress" style="width: 50em"><div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div</div>');
-                            fetch(`/establishment/${this.options.id}/fragment`, {headers: {'Accept': 'text/html'}})
-                                .then(res => res.text())
-                                .then(html => $('#inspection').html(html))
-                                .then(_ => Init.page())
-                        })
-                });
-            L.control.layers(null, Object.fromEntries([...cities.entries()].sort())).addTo(map);
-            $('#loading-progress-bar').hide();
-        })
-</script>
 </body>
 </html>
