--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,6 +19,12 @@
         .leaflet-popup-content a {
             text-decoration: none;
         }
+        .gone::after {
+            content: '†';
+            position: relative;
+            top: -4px;
+            color: var(--bs-danger);
+        }
     </style>
 </head>
 <body onload="setup()">
@@ -32,7 +38,9 @@
             </div>
             <div class="d-flex align-items-center justify-content-center">
                 <p><b>Note!</b> An asterisk (*) on hover after the name means the coordinates were modified slightly to
-                    prevent layering.</p>
+                    prevent layering.<br>A red cross (†) means the restaurant is probably missing from its data source.
+                </p>
+                <!-- TODO buff out the text here? -->
             </div>
         </div>
     </div>
