Add opengraph meta tags for index and establishment pages

--- a/src/main/resources/templates/establishment.html
+++ b/src/main/resources/templates/establishment.html
@@ -2,6 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <meta th:content="${'Inspections for ' + establishment.name()}" property="og:title">
+    <meta th:content="${lastRank == null ? '' : 'Rank: ' + lastRank + '%. ' + inspections.size() + ' inspection' + (inspections.size() == 1 ? '' : 's') + '.'}" property="og:description">
+
     <title th:text="${establishment.name()}"></title>
     <div th:replace="~{fragments/scripts.html :: scripts}"></div>
 </head>
