--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <meta content="Dohmap - View health inspections across the Salt Lake area." property="og:title">
+    <meta th:content="${count}" property="og:description">
+
     <title>DOH Map!</title>
 
     <link rel="stylesheet" href="/static/leaflet/leaflet.css"/>
