--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
             content: '†';
             position: relative;
             top: -4px;
-            color: var(--bs-danger);
+            color: var(--bs-gray-600);
         }
     </style>
 </head>
@@ -42,7 +42,7 @@
             </div>
             <div class="d-flex align-items-center justify-content-center">
                 <p><b>Note!</b> An asterisk (*) on hover after the name means the coordinates were modified slightly to
-                    prevent layering.<br>A red cross (†) means the restaurant is probably missing from its data source.
+                    prevent layering.<br>A grey pin or grey cross (†) means the restaurant is probably missing from its data source.
                 </p>
                 <!-- TODO buff out the text here? -->
             </div>
