--- a/src/main/resources/templates/fragments/inspection.html
+++ b/src/main/resources/templates/fragments/inspection.html
@@ -1,22 +1,14 @@
 <div th:fragment="inspection" th:remove="tag">
-    <h1 th:text="'Details for ' + ${establishment.name()}"></h1>
+    <h1>
+        <a th:text="'Details for ' + ${establishment.name()}"></a>
+        <a data-toggle="tooltip" data-bs-placement="top"
+           title="Get a standalone page for this establishment with inspection details."
+           target="_blank" th:href="${'/establishment/' + establishment.id()}"> ⧉</a>
+    </h1>
     <div class="container">
         <div class="row">
             <div class="col-6">
                 <table class="table">
-                    <tr>
-                        <td>ID</td>
-                        <td class="d-flex">
-                            <div th:if="${fragView != null}">
-                                <a data-toggle="tooltip" data-bs-placement="top" title="Get a standalone page for this establishment with inspection details."
-                                   target="_blank" th:text="${establishment.id()} + ' ⧉'" th:href="${'/establishment/' + establishment.id()}"></a>
-                            </div>
-                        <div th:if="${fragView == null}" th:text="${establishment.id()}"></div>
-                        &nbsp;&#8212;&nbsp;
-                        <a data-toggle="tooltip" data-bs-placement="top" title="Get this establishment as JSON."
-                               target="_blank" th:href="${'/api/v1/establishment/' + establishment.id()}">JSON</a>
-                        </td>
-                    </tr>
                     <tr>
                         <td>Address</td>
                         <td th:text="${establishment.getFullAddress()}"></td>
@@ -59,45 +51,56 @@
                 </table>
             </div>
         </div>
-    </div>
-    <h2>Inspections</h2>
-    <!--    <button type="button" class="btn btn-primary btn-sm">Toggle All</button>-->
-    <p th:if="${inspections.isEmpty()}">No inspections available :(</p>
-    <div th:if="${!inspections.isEmpty()}" th:id="${establishment.id()}" class="accordion">
-        <div th:each="i,idx : ${inspections}" class="accordion-item">
-            <h2 th:id="'h_' + ${i.i().id()}" class="accordion-header">
-                <button class="accordion-button" th:classappend="${idx.count != 1} ? 'collapsed'"
-                        type="button" data-bs-toggle="collapse"
-                        th:data-bs-target="'#c_' + ${i.i().id()}"
-                        th:aria-controls="'c_' + ${i.i().id()}"
-                        th:text="${i.i().inspectionDate() + ', Type: ' + i.i().inspectionType() + ', Score: ' + i.i().score() + ', ' + i.critCount() + ' crit and ' + i.nonCritCount() + ' non-crit.'}">
-                </button>
-            </h2>
-            <div th:id="'c_' + ${i.i().id()}" class="accordion-collapse collapse"
-                 th:classappend="${idx.count == 1} ? 'show'"
-                 th:aria-labelledby="'h_' + ${i.i().id()}">
-                <div class="accordion-body">
-                    <table class="table table-hover table-bordered table-sm">
-                        <tr class="table-success">
-                            <th>Code</th>
-                            <th>Observed Violations</th>
-                            <th>Points</th>
-                            <th>Critical</th>
-                            <th>Occurrences</th>
-                            <th data-toggle="tooltip" data-placement="top" title="Corrected on site during inspection.">COS</th>
-                            <th data-toggle="tooltip" data-placement="top" title="Public Health Rationale (Why is this a violation?)">PHR</th>
-                        </tr>
-                        <tr th:each="v : ${i.v()}" th:class="${v.critical() ? 'table-danger' : 'table-primary'}">
-                            <td th:text="${v.code()}"></td>
-                            <td th:text="${v.observed()}"></td>
-                            <td th:text="${v.points()}"></td>
-                            <td th:text="${v.critical()}"></td>
-                            <td th:text="${v.occurrences()}"></td>
-                            <td th:text="${v.correctedOnSite()}"></td>
-                            <td th:text="${v.publicHealthRationale()}"></td>
-                        </tr>
-                    </table>
+        <h2>Inspections</h2>
+        <p th:if="${inspections.isEmpty()}">No inspections available :(</p>
+        <div th:if="${!inspections.isEmpty()}" th:id="${establishment.id()}" class="accordion">
+            <div th:each="i,idx : ${inspections}" class="accordion-item">
+                <h2 th:id="'h_' + ${i.i().id()}" class="accordion-header">
+                    <button class="accordion-button" th:classappend="${idx.count != 1} ? 'collapsed'"
+                            type="button" data-bs-toggle="collapse"
+                            th:data-bs-target="'#c_' + ${i.i().id()}"
+                            th:aria-controls="'c_' + ${i.i().id()}"
+                            th:text="${i.i().inspectionDate() + ', Type: ' + i.i().inspectionType() + ', Score: ' + i.i().score() + ', ' + i.critCount() + ' crit and ' + i.nonCritCount() + ' non-crit.'}">
+                    </button>
+                </h2>
+                <div th:id="'c_' + ${i.i().id()}" class="accordion-collapse collapse"
+                     th:classappend="${idx.count == 1} ? 'show'"
+                     th:aria-labelledby="'h_' + ${i.i().id()}">
+                    <div class="accordion-body">
+                        <table class="table table-hover table-bordered table-sm">
+                            <tr class="table-success">
+                                <th>Code</th>
+                                <th>Observed Violations</th>
+                                <th>Points</th>
+                                <th>Critical</th>
+                                <th>Occurrences</th>
+                                <th data-toggle="tooltip" data-placement="top" title="Corrected on site during inspection.">COS</th>
+                                <th data-toggle="tooltip" data-placement="top" title="Public Health Rationale (Why is this a violation?)">PHR</th>
+                            </tr>
+                            <tr th:each="v : ${i.v()}" th:class="${v.critical() ? 'table-danger' : 'table-primary'}">
+                                <td th:text="${v.code()}"></td>
+                                <td th:text="${v.observed()}"></td>
+                                <td th:text="${v.points()}"></td>
+                                <td th:text="${v.critical()}"></td>
+                                <td th:text="${v.occurrences()}"></td>
+                                <td th:text="${v.correctedOnSite()}"></td>
+                                <td th:text="${v.publicHealthRationale()}"></td>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <small class="d-flex">
+                    <p data-toggle="tooltip" data-bs-placement="top"
+                       title="Internal ID which represents this establishment internally."
+                       target="_blank" th:text="${establishment.id()}"></p>
+                    &nbsp;&#8212;&nbsp;
+                    <a data-toggle="tooltip" data-bs-placement="top" title="Get this establishment as JSON."
+                       target="_blank" th:href="${'/api/v1/establishment/' + establishment.id()}">JSON</a>
+                </small>
             </div>
         </div>
     </div>
