--- a/src/main/resources/templates/fragments/inspection.html
+++ b/src/main/resources/templates/fragments/inspection.html
@@ -95,7 +95,7 @@
             <div class="col-6">
                 <small class="d-flex">
                     <p data-toggle="tooltip" data-bs-placement="top"
-                       title="Internal ID which represents this establishment internally."
+                       title="ID which represents this establishment internally."
                        target="_blank" th:text="${establishment.id()}"></p>
                     &nbsp;&#8212;&nbsp;
                     <a data-toggle="tooltip" data-bs-placement="top" title="Get this establishment as JSON."
