Don't check inspections we already know of (unless it's Friday)
Optimization for the scraper

--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -18,6 +18,7 @@
         <div th:if="${successText}" th:text="${successText}" class="alert alert-success" role="alert"></div>
         <div th:if="${failureText}" th:text="${failureText}" class="alert alert-danger" role="alert"></div>
         <a href="/admin/browserTest">Run browser test (1 browser on page 1 only)</a><br>
+        <a href="/admin/liteBrowserTest">Run lite browser test (1 browser on page 1 only)</a><br>
         <a href="/admin/fullRun">Kick off full scrape run.</a>
     </div>
 </div>
