New height CSS rule for map and inspection

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
 
     <style>
         #map, #inspection {
-            height: 1200px;
+            height: calc(95vh - 4em);
         }
         .leaflet-popup-content a {
             text-decoration: none;
