Color pin yellow on map if the establishment had an inspection within the last seven days

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,7 +42,10 @@
             </div>
             <div class="d-flex align-items-center justify-content-center">
                 <p><b>Note!</b> An asterisk (*) on hover after the name means the coordinates were modified slightly to
-                    prevent layering.<br>A grey pin or grey cross (†) means the restaurant is probably missing from its data source.
+                    prevent layering.
+                    <br>A grey pin or grey cross (†) means the restaurant is probably missing from its data source.
+                    <br>A green pin means the establishment had an inspection (per health department data) within the
+                    last seven days.
                 </p>
                 <!-- TODO buff out the text here? -->
             </div>
