Add support for Utah County inspections
Completely different platform than what SLC uses, but the data models mostly fit together.

* Add a source column/enum, to track where an establishment came from.
* Add a system identifier (sys_id) column to establishments and inspections. Utah County has unique identifiers for each establishment and inspection. These will be used for matching instead of other establishment fields for Utah County.
* Map certain city names to its correct one in pins
* Always capitalize city names in pins

--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -19,7 +19,14 @@
         <div th:if="${failureText}" th:text="${failureText}" class="alert alert-danger" role="alert"></div>
         <a href="/admin/browserTest">Run browser test (1 browser on page 1 only)</a><br>
         <a href="/admin/liteBrowserTest">Run lite browser test (1 browser on page 1 only)</a><br>
-        <a href="/admin/fullRun">Kick off full scrape run.</a>
+        <a href="/admin/fullRun">Kick off full scrape run.</a><br>
+        <a id="utcoTest"
+           onclick="$('#utcoTest').attr('href', `/admin/utcoTest?letters=${prompt('Enter letters to search UTCO for')}`);"
+           href="/admin/utcoTest">Test UTCO's health inspection scraper.</a><br>
+        <a id="utcoTestStartAt"
+           onclick="$('#utcoTestStartAt').attr('href', `/admin/utcoTestStartAt?letters=${prompt('Enter letters to start UTCO at')}`);"
+           href="/admin/utcoTestStartAt">Start UTCO's health inspection scraper at a two letter pair.</a><br>
+        <a href="/admin/fullUtcoTest">Kick off full UTCO scrape run.</a><br>
     </div>
 </div>
 </body>
