--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -17,12 +17,13 @@
         <h1>Admin functions!</h1>
         <div th:if="${successText}" th:text="${successText}" class="alert alert-success" role="alert"></div>
         <div th:if="${failureText}" th:text="${failureText}" class="alert alert-danger" role="alert"></div>
-        <a href="/admin/browserTest">Run browser test (1 browser on page 1 only)</a><br>
-        <a href="/admin/liteBrowserTest">Run lite browser test (1 browser on page 1 only)</a><br>
-        <a href="/admin/fullRun">Kick off full scrape run.</a><br>
+        <a href="/admin/browserTest">Run SLCO browser test (1 browser on page 1 only)</a><br>
+        <a href="/admin/liteBrowserTest">Run lite SLCO browser test (1 browser on page 1 only)</a><br>
+        <a href="/admin/fullRun">Kick off full SLCO scrape run.</a><br>
+        <a href="/admin/liteRun">Kick off lite SLCO scrape run.</a><br>
         <a id="utcoTest"
            onclick="$('#utcoTest').attr('href', `/admin/utcoTest?letters=${prompt('Enter letters to search UTCO for')}`);"
-           href="/admin/utcoTest">Test UTCO's health inspection scraper.</a><br>
+           href="/admin/utcoTest">Test UTCO's health inspection scraper with specific letters.</a><br>
         <a id="utcoTestStartAt"
            onclick="$('#utcoTestStartAt').attr('href', `/admin/utcoTestStartAt?letters=${prompt('Enter letters to start UTCO at')}`);"
            href="/admin/utcoTestStartAt">Start UTCO's health inspection scraper at a two letter pair.</a><br>
