--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -7,10 +7,13 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/">Home</a>
+                    <a class="nav-link" th:classappend="${'home'.equals(activePage)} ? 'active'" aria-current="page" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/establishmentSearch">Search</a>
+                    <a class="nav-link" th:classappend="${'search'.equals(activePage)} ? 'active'" aria-current="page" href="/establishmentSearch">Search</a>
+                </li>
+                <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item">
+                    <a class="nav-link" th:classappend="${'admin'.equals(activePage)} ? 'active'" aria-current="page" href="/admin">Admin</a>
                 </li>
             </ul>
             <ul th:if="${showLoad != null}" id="loading-progress-bar" class="navbar-nav me-auto mb-2 mb-md-0">
