New admin function to reaffirm missing locations

--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -28,6 +28,7 @@
            onclick="$('#utcoTestStartAt').attr('href', `/admin/utcoTestStartAt?letters=${prompt('Enter letters to start UTCO at')}`);"
            href="/admin/utcoTestStartAt">Start UTCO's health inspection scraper at a two letter pair.</a><br>
         <a href="/admin/fullUtcoTest">Kick off full UTCO scrape run.</a><br>
+        <a href="/admin/reaffirmLocations">Reaffirm locations for establishments without one.</a><br>
     </div>
 </div>
 </body>
