--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -12,6 +12,9 @@
                 <li class="nav-item">
                     <a class="nav-link" th:classappend="${'search'.equals(activePage)} ? 'active'" aria-current="page" href="/establishmentSearch">Search</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:classappend="${'about'.equals(activePage)} ? 'active'" aria-current="page" href="/about">About</a>
+                </li>
                 <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item">
                     <a class="nav-link" th:classappend="${'admin'.equals(activePage)} ? 'active'" aria-current="page" href="/admin">Admin</a>
                 </li>
